--- a/proxy/config.yaml
+++ b/proxy/config.yaml
@@ -2,6 +2,7 @@ tcp_server:
   host: 0.0.0.0
   port: 2003
 debug_level: 10
+thing_name: entry_dev
 access_point: ap-northeast-1
 aws_IoT_broker:
   us-east-2:
